# cpp_demos

./: README.md  copy_to_cpp_demos.sh  gdb_test  gdb_test.cpp  list.cpp  sizeof.cpp
char_buffer/: a.out  mem_founction.cpp  sizeof_strlen.cpp  str_founction.cpp
deamon_process/: deamon.cpp
design_pattern/builder/: a.out  builder.cpp
design_pattern/factory/: a.out  factory.cpp
design_pattern/observer/: a.out  observer.cpp
kcp_demos/: CMakeLists.txt  README.md
kcp_demos/include/: kcp_wrapper.h
kcp_demos/src/: kcp_wrapper.cpp  receiver.cpp  sender.cpp
makefiles/: 1.mk
memory_pool/: memory_pool1.cpp
mmap/: hjmap  mmap_read  mmap_read.cpp  mmap_write  mmap_write.cpp
move/: a.out  move.cpp  rvalue.cpp
multi_process/: 1fork.cpp  2process_pool  2process_pool.cpp  3http_server  3http_server.cpp  httpserver  httpserver.cpp
pipe/: name_pipe_read  name_pipe_read.cpp  name_pipe_write  name_pipe_write.cpp  named_pipe  named_pipe.cpp  unnamed_pipe  unnamed_pipe.cpp
producer_and_consumer/: a.out  producerAndConsumer1.cpp
pthread/: a.out  pthread_cancel.cpp  pthread_condition.cpp  pthread_condition1.cpp  pthread_create.cpp  pthread_create1.cpp  pthread_detach.cpp  pthread_exit_retval.cpp  pthread_join.cpp  pthread_mutex.cpp  pthread_self.cpp
signal/: process_zombie_with_signal  process_zombie_with_signal.cpp  signal_test  signal_test.cpp
smart_ptr/: a.out  shared_ptr.cpp  unique_ptr.cpp
socket/: client  server  sock_client_navie.cpp  sock_server_navie.cpp
udp/: multicast_receiver.cpp  multicast_sender.cpp  udp_receiver.cpp  udp_sender.cpp
(+3 files in other folders)
